Startup Activity Base
- Logic for switching between Login and Signup
- Needs code for DB
- Needs Polish

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">Dashyy</string>
+
+    <!-- Startup Screen -->
+    <string name="forgotPWPB_Text">Forgot Password?</string>
+    <string name="loginPB_Text">LOG IN</string>
+    <string name="signupPB_Text">Sign Up</string>
+
 </resources>
