--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,6 @@
     <string name="forgotPWPB_Text">Forgot Password?</string>
     <string name="loginPB_Text">LOG IN</string>
     <string name="signupPB_Text">Sign Up</string>
+    <string name="title_activity_maps">Map</string>
 
 </resources>
