--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Dashyy</string>
+    <string name="title_activity_maps">Maps</string>
 
     <!-- Startup Screen -->
     <string name="forgotPWPB_Text">Forgot Password?</string>
